Finished report from Overleaf

--- a/report/abstract/abstract.tex
+++ b/report/abstract/abstract.tex
@@ -1,5 +1,8 @@
 \beforeabstract
 \prefacesection{Abstract}
-The Abstract of the report should be written here, it should provide a short summary of the work encompassing no more than 300 words.
+Within the world of online marketing, the multitude of social media platforms that exist today serve as modern day market-squares, with the raucous cries of merchants replaced with a wall of text posts all competing for attention. The success of marketing material used on social media is heavily dependent on recognising the nuances of the targeted community, as well an understanding the psychological traits of social media users. A formula for achieving success on social media platforms would be extremely useful in allowing businesses to market their products in an effective manner. It would also be of great interest to the political sphere and would allow politicians to reach larger audiences and be able to appear more favourable to distinct voter demographics.
+
+This report evaluates how the success of comments within the social media platform Reddit are affected by various extrinsic factors via a regression analysis.  The report also explores the content of each comment through text analysis and concludes by presenting a classification model, based on a neural network approach, to accurately determine how well-received a constructed comment would be within a chosen Reddit community.
+
 
 \afterpreface \afterabstract
