--- a/report/research/research.tex
+++ b/report/research/research.tex
@@ -1,41 +1,39 @@
 \chapter{Background Research}\label{ch:Background}
 
-This chapter provides some background research on the project and examines some previous work.
-
-\section{Political Motivations behind Subreddits}
-Reddit is home to several political subreddits, many of which have high subscriber counts and activity per day. As stated in the paper titled Automating power political actors have used bots in social platforms to influence public opinion. They are used to not only raise awareness in certain political campaigns but also to follow politicians on platforms such as twitter and Facebook to give the illusion of popularity. They can even do an attack on news outlets where they flood their wall with misinformation as to avoid and sidetrack public attention. [10] the above research strongly shows why in our paper it is imperative that we distinguish AI from human users to get accurate and truthful data to work with. Also stated by the paper titled Melanization of Politics it describes and researches in the rise of political discussion due to the rise of media in the late nineteenth century early two-thousands it discusses how politics is now spoken on such a large scale. [11]
+\section{Political Motivations Behind Subreddits}
+Reddit is home to several political subreddits, many of which have high subscriber counts and daily activity. As stated in \cite{5}, political actors have used bots on social platforms to influence public opinion. They are used to not only raise awareness in certain political campaigns but also to follow politicians on platforms such as Twitter and Facebook to give the illusion of popularity. They can even do an attack on news outlets where they flood their wall with misinformation as to avoid and sidetrack public attention. \cite{5} the above research strongly shows why in our research it is imperative that we distinguish AI from human users to get accurate and truthful data to work with. Also stated by the paper titled Mediatization of Politics it describes and researches the rise of political discussion due to the rise of media in the late nineteenth century early two-thousands it discusses how politics is now spoken on such a large scale. \cite{10} This paper \cite{11} also states that players claim media ownership, social responsibility and citizen information this effect isn’t just on local governments but also on a large scale such as the European Union commissions and the United Nations agencies. This paper \cite{12} goes over an infamous shooting from a white police officer shot and killed a 18 year old African American. In which the death was publicised and detailed on social media there was also many campaigns for justice against the police officer and over 3.6 million tweets on twitter detailing and reflecting on the event. This further shows how political events in social media can be just as powerful as through an official government.
 
 \section{Psychological Traits in Users}
 Psychological traits play an important part in social media posts.
 
-This paper \cite{kilgo_ng_riedl_lacasa-mas_2018} suggested that Users with Stronger personality traits tend to have stronger engagements in online discussions and therefore have increased interactions on Reddit. These users tend to use social media more because they have a more extroverted personality, and are much more open on social media platforms. This also means due to their extrovert traits, that these users tend to have better leadership qualities. The results, however, had issues with statistical significance.
+This paper \cite{1} suggested that users with stronger personality traits tend to have stronger engagements in online discussions and therefore have increased interactions on Reddit. These users tend to use social media on a more active basis because they have a more extroverted personality, and are much more open on social media platforms. This also means due to their extrovert traits, that these users tend to have better leadership qualities. The results, however, had issues with statistical significance.
 
-Users tend to display “Cyborg-like” behaviour when trying to attract attention to their posts. This doesn’t always work and a significant number of posts studied \cite{7} failed to garner the attention they wanted. 
+As stated in \cite{13}, anonymity of users can often provoke hostile behaviour. The removal of personal accountability on anonymous social networking sites such as Reddit can cause some users to conduct themselves in an abnormal/ less desirable manner.  With no connection between a user’s online presence and their personal lives, users can treat other users and their posts in a way they wouldn’t normally. This can have adverse effects on predicting certain users possible perceptions and interactions with Reddit posts
 
-\subsection{User Behaviour Patterns}
-It was found that women tend to post far less than men, and age determines how common a user will post on the platform. Users who had higher news engagement tend to comment and vote more on news related posts. As well as that, Older users were much more likely to post on Reddit.  Voting patterns have no significant predictors, with the only exception being that news engagement can predict voting. It was suggested that the reason women post less is due to the fear of suffering from online harassment, as Reddit has a history of harbouring subreddits that have “existed to only annoy other redditors”. Egregious examples include /r/fatpeoplehate and /r/rapingwomen. Of which, were banned by Reddit in 2015. \cite{4}
+Users tend to display “Cyborg-like” behaviour when trying to attract attention to their posts. This doesn’t always work and a significant number of posts studied failed to garner the attention they wanted \cite{7}. 
 
-When it comes to positive events occurring on Social Media, it was found that there is an increase in negative emotions in social media on Twitter. It was found that on Reddit, highly upvoted stories tend to gather a proportionate amount of downvotes, therefore indicating that the same effect can happen on Reddit as well.\cite{3}
+It was found that women tend to post far less than men, and age determines how common a user will post on the platform. Users who had higher news engagement tend to comment and vote more on news related posts. As well as that, Older users were much more likely to post on Reddit. Voting patterns have no significant predictors, with the only exception being that news engagement can predict voting \cite{1}. It was suggested that the reason women post less is due to the fear of suffering from online harassment, as Reddit has a history of harbouring subreddits that have “existed to only annoy other redditors” \cite{1} \cite{4}. Egregious examples include /r/fatpeoplehate and /r/rapingwomen, both of which were banned by Reddit in 2015 \cite{4}. Other studies found that women employed various tactics to withdraw or mask their gender in online video games and social media platforms in an attempt to avoid receiving hate in these male dominated mediums \cite{1}\cite{15}. Some women would actively pose as males on said platforms, employing different vocabularies to appear male and avoid unjust scrutiny towards them \cite{15}. This poses a problem similar to the “toxic-anonymity” problem; some users posts are artificially doctored based on the environment they are posted in. The dishonesty of these female users’ posts, morally justified or not presents itself as a problem when determining how to predict user posts and popularity.
 
-Most posts on Reddit “die” after one day in terms of activity, which is a pattern that has been observed on many other social media platforms. For posts that only had 1 posted comment, it was found that 72.78 Per cent of these post did not last more  600 seconds in terms of new activity \cite{7}. Users who comment frequently on other user posts tend to have more highly scored posts and therefore if you want to have good interactions with other posts, you need to be reciprocative. 67 Per cent of authors had more effective comments than posts compared to 22 Per cent who has less effective comments than posts.
+When it comes to positive events occurring on Social Media, it was found that there is an increase in negative emotions in social media on Twitter. It was found that on Reddit, highly upvoted stories tend to gather a proportionate amount of downvotes, therefore indicating that the same effect can happen on Reddit as well \cite{3}.
 
-Most users are only active on a handful of subreddits. It was found that during a 1-year data collection on 309 Reddit users, only 109 unique users(104 subscribed and 44 unsubscribed) had subscription events fired (This is when a user subscribes to a subreddit). Users tend to have varying attention spans as 73 Per cent of posts are rated without viewing the content of the post first. It was found that most users were “headline browsers” who only look at the headline of a post before voting on it. It was also found that most users also only look at the top headline posts on the front page, which is known as position bias. This means that users tend to gravitate towards posts that are on top of the front page of a subreddit, compared to posts further down the page. Users often vote on posts before viewing the comments on the post. Over 50 Per cent of users vote before actually checking the comments replying to the post. \cite{8}
+Most posts on Reddit “die” after one day in terms of activity, which is a pattern that has been observed on many other social media platforms. For posts that only had 1 posted comment, it was found that 72.78\% of these post did not last more  600 seconds in terms of new activity \cite{7}. Users who comment frequently on other user posts tend to have more highly scored posts and therefore if you want to have good interactions with other posts, you need to be reciprocative. 67\% of authors had more effective comments than posts compared to 22\% who has less effective comments than posts.
+
+Most users are only active on a handful of subreddits. It was found that during a 1-year data collection on 309 Reddit users, only 109 unique users(104 subscribed and 44 unsubscribed) had subscription events fired (This is when a user subscribes to a subreddit). Users tend to have varying attention spans as 73\% of posts are rated without viewing the content of the post first. It was found that most users were “headline browsers” who only look at the headline of a post before voting on it. It was also found that most users also only look at the top headline posts on the front page, which is known as position bias. This means that users tend to gravitate towards posts that are on top of the front page of a subreddit, compared to posts further down the page. Users often vote on posts before viewing the comments on the post. Over 50\% of users vote before actually checking the comments replying to the post. \cite{8}
 
 It has been noted that the variety of subreddits browsed by users is lacking. A severe lack of browsing and voting variety was noted which indicates that users tend to create “echo chambers”, in which they only view content that they agree with. \cite{8} This is a very commonly observed phenomenon across many social media platforms, and Reddit is no exception. \cite{8}
 
 Moderation doesn’t always affect user behaviour on Reddit. Subreddits themed around real-world discussion tend to value analytical and objective based comments compared to less serious subreddits. Even when filters are enabled preventing certain types of content being submitted, this makes little difference in the behaviour patterns of users.
 
+
 \section{Significant Events}
-Governments use bot farms on social media to manipulate public perception on social media, and Reddit is no exception. Many Governments, militaries and significant state actors have been outed as having used social-bots to appear either more relevant and influential or more controversially to directly manipulate legitimate users opinions on political events and military regimes. \cite{5}
+Governments use bot farms on social media to manipulate public perception on social media, and Reddit is no exception. Many Governments, militaries and significant state actors have been outed as having used social-bots to appear either more relevant and influential or more controversially to directly manipulate legitimate users opinions on political events and military regimes. \cite{5} This paper \cite{14} goes in to massive detail on the July 2015 Reddit blackouts where the admins of the site shut down over 2,200 subreddits in protest of their new CEO Ellen Pao this proved successful where within a couple hours the company meet their demands and within a week the CEO of Reddit resigned. This shows how the masses of social media can have a massive effect on the way a company runs there platform. The following paper \cite{16} talks about how Reddit experienced an event known as the fappening where famous celebrity nudes that were stored in the apple iCloud service. Where stolen and leaked onto Reddit and within 24 hours r/thefappening gained over 100,000 subs. Showing again that Reddit is not just a social platform in which only discussion happens and no action.
+
+One of the major events in recent years that rocked social media was the \#GamerGate controversy. \#GamerGate was a public outrage campaign against alleged collusion in games journalism and poor ethical standards. Supporters of the movement assert that the main focus of the campaign was to push for better ethical standards in games journalism. However, opponents of the movement refute these claims, claiming that this was simply a smokescreen to harass women working in the games industry, especially those with feminist ideals. Reddit was used to discuss the controversy, and many Redditors used the subreddit /r/KotakuInAction to discuss issues within the movement. KotakuInAction was similar in themes and beliefs to TumblrInAction, a subreddit which satirises the culture of Tumblr but often harbours anti feminist and binary attitudes amongst it’s users. Many users express libertarian and/or conservative views, which implies a political undertone influencing discourse on these forums. Because of Reddit’s use of pseudonyms and score aggregation, Reddit presents some form of accountability and accreditation for users, allowing sources and views to be verified, alongside better organisation capabilities. Therefore with moderation, in theory toxic contributors can be repealed. Though as controversies such as GamerGate and theFappening show, this can sometime allow users to harbour toxic content that can cause stress and harassment to other users. In 2015, Reddit employed new policies to combat toxic behaviour on the platform, and began to quarantine subreddits that contain indecent imagery or offensive content. These subreddits are not publicly listed as a result.\cite{15} 
+
 
 \section{Machine Learning}
-Reddit is host to multiple AI experiments as well as many bots to reply to incorrect post syntax. Reddit is commonly used due to having various different subreddits from politics down to humour subreddits. This makes for an excellent place for AI to learn through varying teaching methods such as reinforcement learning to learn from peers in the subreddit or to strive for higher upvotes then previous posts. \cite{1}
+Reddit is host to multiple AI experiments as well as many bots to reply to incorrect post syntax. Reddit is commonly used due to having various different subreddits from politics down to humour subreddits. This makes for an excellent place for AI to learn through varying teaching methods such as reinforcement learning to learn from peers in the subreddit or to strive for higher upvotes then previous posts. \cite{2}
 	
-The popularity of Reddit posts can be hard to classify without analysing the content of the post first. It can also be hard to classify posts if the subreddit in question covers a broad subject. Post popularity is determined on the content of the post, when the post was posted and the particular subreddit it was posted on, which, can be regarded as the context for discussion. An example of this would be the subreddit /r/pics, which had a poor performance in error rate due to the broadness of the subreddit’s context. Whereas other subreddits follow more specialized trends which are easier to classify. This paper ran classification algorithms and found that it ran better on simpler datasets. It also found that features like a Reddit post’s title lacked “indicative” power on whenever it made it a popular post or not. It suggested that more features from the Reddit API would improve prediction ability. \cite{6}
+The popularity of Reddit posts can be hard to classify without analysing the content of the post first. It can also be hard to classify posts if the subreddit in question covers a broad subject. Post popularity is determined on the content of the post, when the post was posted and the particular subreddit it was posted on, which, can be regarded as the context for discussion. An example of this would be the subreddit /r/pics, which had a poor performance in error rate due to the broadness of the subreddit’s context. Whereas other subreddits follow more specialised trends which are easier to classify. This paper ran classification algorithms and found that it ran better on simpler datasets. It also found that features like a Reddit post’s title lacked “indicative” power on whenever it made it a popular post or not. It suggested that more features from the Reddit API would improve prediction ability. \cite{6}
 
-With that said, this paper \cite{9} suggests that it is possible to predict the score of Reddit comments, even if the communities are loosely defined (in terms of context) and disorganized. It found of note that user flairs (which are often given by moderators of a subreddit) can be an excellent predictor of highly popular comments. The model could also retrieve, with good precision, the highest rated comments within a particular post. It found that lowly rated comments tend to contain outdated jokes or information, which by that point had been cycled by the community to the point of exhaustion. Machine learning on Reddit needs to take into account community-related factors into what makes a comment popular. Posts on expertise related subreddit communities tend to use more technical and analytical terms. Likewise, comments on news related subreddits tend to be less emotional and value analytical insight over emotional responses. Some subreddits can vary in language use, the /r/worldnews subreddit is more diverse lexically, whereas /r/worldpolitics tends to use more “netspeak” compared to other subreddits. Emotional comment preference can vary between subreddits, with some subreddits heavily disliking having emotion in their comments. Time can play an important factor in determining how popular a comment can get. Comments on communities such as /r/news tend to be much more popular compared if posted later in time compared to comments made earlier, whereas other communities show the opposite happening. Moderation doesn’t always affect user behaviour on Reddit. Subreddits themed around real-world discussion tend to value analytical and objective based comments compared to less serious subreddits. Even when filters are enabled preventing certain types of content being submitted, this makes little difference in the behaviour patterns of users. This means that moderation doesn’t necessarily need to be taken into consideration when ranking comments, as the user behaviour is always affected by a significant amount.
-
-
-\section{Conclusions}
-
-The main conclusions for this chapter.
+With that said, this paper \cite{9} suggests that it is possible to predict the score of Reddit comments, even if the communities are loosely defined (in terms of context) and disorganised. It found of note that user flairs (which are often given by moderators of a subreddit) can be an excellent predictor of highly popular comments. The model could also retrieve, with good precision, the highest rated comments within a particular post. It found that lowly rated comments tend to contain outdated jokes or information, which by that point had been cycled by the community to the point of exhaustion. Machine learning on Reddit needs to take into account community-related factors into what makes a comment popular. Posts on expertise related subreddit communities tend to use more technical and analytical terms. Likewise, comments on news related subreddits tend to be less emotional and value analytical insight over emotional responses. Some subreddits can vary in language use, the /r/worldnews subreddit is more diverse lexically, whereas /r/worldpolitics tends to use more “netspeak” compared to other subreddits. Emotional comment preference can vary between subreddits, with some subreddits heavily disliking having emotion in their comments. Time can play an important factor in determining how popular a comment can get. Comments on communities such as /r/news tend to be much more popular compared if posted later in time compared to comments made earlier, whereas other communities show the opposite happening. Moderation doesn’t always affect user behaviour on Reddit. Subreddits themed around real-world discussion tend to value analytical and objective based comments compared to less serious subreddits. Even when filters are enabled preventing certain types of content being submitted, this makes little difference in the behaviour patterns of users. This means that moderation doesn’t necessarily need to be taken into consideration when ranking comments, as the user behaviour is always affected by a significant amount.
