--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -137,3 +137,150 @@ doi={10.1109/ICCCN.2017.8038388},
 ISSN={},
 month={July},}
 
+@inbook{10,
+	author = {Mazzoleni, Gianpietro},
+	publisher = {American Cancer Society},
+	isbn = {9781405186407},
+	title = {Mediatization of Politics},
+	booktitle = {The International Encyclopedia of Communication},
+	doi = {10.1002/9781405186407.wbiecm062},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781405186407.wbiecm062},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781405186407.wbiecm062},
+	year = {2008},
+	keywords = {Communication, Politics and Elections, Politics},
+}
+
+@article{11,
+	author = {Bennett, W. Lance},
+	title = {GLOBAL MEDIA AND POLITICS: Transnational Communication Regimes and Civic Cultures},
+	journal = {Annual Review of Political Science},
+	volume = {7},
+	number = {1},
+	pages = {125-148},
+	year = {2004},
+	doi = {10.1146/annurev.polisci.7.012003.104804},
+
+URL = { https://doi.org/10.1146/annurev.polisci.7.012003.104804},
+eprint = { https://doi.org/10.1146/annurev.polisci.7.012003.104804}, 
+}
+
+@article{12,
+	author = {Bonilla, Yarimar and Rosa, Jonathan},
+	year = {2015},
+	month = {02},
+	pages = {},
+	title = {\#Ferguson: Digital Protest, Hashtag Ethnography, and the Racial Politics of Social Media in the United States},
+	volume = {42},
+	journal = {American Ethnologist},
+	doi = {10.1111/amet.12112}
+}
+
+@misc{13,
+	title={The Online Disinhibition Effect},
+	author={Suler, J},
+	Journal={CyberPsychology \& Behavior},
+	volume={7},
+	number={3},
+	year={2004},
+	url={https://www.liebertpub.com/doi/10.1089/1094931041291295},
+	publisher={Mary Ann Liebert, Inc.},
+}
+
+@inproceedings{14,
+	author = {Nathan Matias, J},
+	year = {2016},
+	month = {05},
+	pages = {1138-1151},
+	title = {Going Dark: Social Factors in Collective Action Against Platform Operators in the Reddit Blackout},
+	doi = {10.1145/2858036.2858391}
+}
+
+@article{15,
+	author = {Jesse Fox and Wai Yen Tang},
+	title ={Women’s experiences with general and sexual harassment in online video games: Rumination, organizational responsiveness, withdrawal, and coping strategies},
+	journal = {New Media \& Society},
+	volume = {19},
+	number = {8},
+	pages = {1290-1307},
+	year = {2017},
+	doi = {10.1177/1461444816635778},
+	
+	URL = {https://doi.org/10.1177/1461444816635778},
+	eprint = {https://doi.org/10.1177/1461444816635778},
+}
+
+@article{16,
+	author = {Massanari, Adrienne},
+	year = {2015},
+	month = {10},
+	pages = {},
+	title = {\#Gamergate and The Fappening: How Reddit's algorithm, governance, and culture support toxic technocultures},
+	volume = {19},
+    journal = {New Media \& Society},
+	doi = {10.1177/1461444815608807}
+}
+
+@article{17,
+	author = {JJ Allaire},
+	title = { R Interface to 'Keras' • keras [online] },
+	publisher = {keras},
+	year = {2017},
+	url = {https://keras.rstudio.com/},
+}
+
+@misc{18,
+    author = {Ooms, J.},
+    title = {NDJSON speed contest. [online]},
+    publisher = {GitHub},
+    year = {2019},
+    url = {https://github.com/jeroen/ndjson-benchmark/blob/master/benchmark.md}
+    
+}
+
+@Article{19,
+author="de Boer, Pieter-Tjerk
+and Kroese, Dirk P.
+and Mannor, Shie
+and Rubinstein, Reuven Y.",
+title="A Tutorial on the Cross-Entropy Method",
+journal="Annals of Operations Research",
+year="2005",
+month="Feb",
+day="01",
+volume="134",
+number="1",
+pages="19--67",
+abstract="The cross-entropy (CE) method is a new generic approach to combinatorial and multi-extremal optimization and rare event simulation. The purpose of this tutorial is to give a gentle introduction to the CE method. We present the CE methodology, the basic algorithm and its modifications, and discuss applications in combinatorial optimization and machine learning.",
+issn="1572-9338",
+doi="10.1007/s10479-005-5724-z",
+url="https://doi.org/10.1007/s10479-005-5724-z"
+}
+
+@Article{20,
+    author = {McCaffrey, J.},
+    year = {2019},
+    title = {Why You Should Use Cross-Entropy Error Instead Of Classification Error Or Mean Squared Error For Neural Network Classifier Training.},
+    publisher = {WordPress},
+    url = {https://jamesmccaffrey.wordpress.com/2013/11/05/why-you-should-use-cross-entropy-error-instead-of-classification-error-or-mean-squared-error-for-neural-network-classifier-training/}
+    }
+    
+@article{21,
+  title={Tswana finite state tokenisation},
+  author={Pretorius, Laurette and Viljoen, Biffie and Berg, Ansu and Pretorius, Rigardt},
+  journal={Language Resources and Evaluation},
+  volume={49},
+  number={4},
+  pages={831--856},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{22,
+  title={Enhancing recurrent neural network-based language models by word tokenization},
+  author={Noaman, Hatem M and Sarhan, Shahenda S and Rashwan, Mohsen AA},
+  journal={Human-centric Computing and Information Sciences},
+  volume={8},
+  pages={1--13},
+  year={2018},
+  publisher={Springer}
+}
